pkl-core/src/test/files/LanguageSnippetTests/input/errors/mappingTypeCheckError4.pkl
num = 1

// EntriesLiteralNode
res: Mapping<String, String> = new {
  [num] = "foo"
}
